--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -11,7 +11,7 @@
 
 .separator {
   margin-top: 5px;
-  margin-bottom: 5px;
+  // margin-bottom: 5px;
   margin-left: 0px;
   margin-right: 0px;
 }
@@ -27,7 +27,8 @@
 }
 
 .job-preview-row {
-  flex-wrap: nowrap;
+  // padding: 10px;
+  // flex-wrap: nowrap;
 }
 
 .job-title {
