Convert my-jobs.component to Semantic UI. Closes #348

--- a/src/app/views/my-jobs/my-jobs.component.html
+++ b/src/app/views/my-jobs/my-jobs.component.html
@@ -4,13 +4,13 @@
     <h3 class="sub-header-title">{{"menu.main.my_assignment" | translate}}</h3>
   </div>
 
-  <div class="row">
-    <div class="my-jobs-header-tab col-xs-6" [ngClass]="{'my-jobs-header-tab-selected': selectedState == 'active'}" (click)="setState('active')" >
+  <div class="ui equal width grid">
+    <div class="column my-jobs-header-tab" [ngClass]="{'my-jobs-header-tab-selected': selectedState == 'active'}" (click)="setState('active')" >
       <h4>
         {{"company.assignments.filter_1" | translate}}
       </h4>
     </div>
-    <div class="my-jobs-header-tab col-xs-6" [ngClass]="{'my-jobs-header-tab-selected': selectedState == 'history'}" (click)="setState('history')">
+    <div class="column my-jobs-header-tab" [ngClass]="{'my-jobs-header-tab-selected': selectedState == 'history'}" (click)="setState('history')">
       <h4>
         {{"company.assignments.filter_2" | translate}}
       </h4>
