Fixed Ebert complaint

--- a/src/app/components/job-card/job-card.component.scss
+++ b/src/app/components/job-card/job-card.component.scss
@@ -9,7 +9,7 @@ $job-card-border-radius: 8px;
   margin: 5px;
   background-color: $default-bg-color;
   border-radius: $job-card-border-radius;
-  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.4);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .4);
   cursor: pointer;
 
   &:hover {
